<resources>
    <string name="app_name">ContactList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">Name</string>
    <string name="phone">Phone</string>

    <string name="btn_save">Save</string>
    <string name="btn_sign_up">Sign Up</string>

    <string name="go_sign_up">>> Go to Sign Up Screen</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
</resources>